--- a/.github/ISSUE_TEMPLATE/01-bug.yml
+++ b/.github/ISSUE_TEMPLATE/01-bug.yml
@@ -69,8 +69,8 @@ body:
     value: "<br>"
 - type: input
   attributes:
-    label: Plugin version
-    description: What version of the plugin are you running?
+    label: Applet version
+    description: What version of the applet are you running?
     placeholder: "Example: 1.0.3"
   validations:
     required: true
@@ -79,49 +79,14 @@ body:
     value: "<br>"
 - type: input
   attributes:
-    label: "Your OS (incl. version)"
-    description: What OS (incl. version) are you running?
-    placeholder: "Example: macOS 15.1.1"
+    label: "Your Radio firmware version"
+    description: What firmware version are you running?
+    placeholder: "Example: 8.5.3"
   validations:
     required: true
 - type: markdown
   attributes:
     value: "<br>"
-- type: dropdown
-  attributes:
-    label: "What web skins / controllers are you seeing the problem with?"
-    description: multiple selection possible
-    multiple: true
-    options:
-      - Material
-      - Logic Teal
-      - Default skin
-      - Classic skin
-      - jivelite (piCorePlayer, SqueezePlay, Touch, Radio)
-      - not applicable
-    default: 0
-  validations:
-    required: true
-- type: markdown
-  attributes:
-    value: "<br>"
-- type: dropdown
-  attributes:
-    label: What browsers are you seeing the problem on?
-    description: Multiple selection possible. If your browser is not listed, add the name to bug description.
-    multiple: true
-    options:
-      - Firefox
-      - Chrome
-      - Safari
-      - Microsoft Edge
-      - other
-      - not applicable
-  validations:
-    required: true
-- type: markdown
-  attributes:
-    value: "<br><br>"
 - type: textarea
   attributes:
     label: Environment
