--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,8 @@
 blank_issues_enabled: false
 contact_links:
   - name: Lyrion Community Forum Support
-    url: https://forums.slimdevices.com/
+    url: https://forums.lyrion.org/
     about: Please ask questions that are not related to bug reports or feature requests here.
+  - name: ⭐ Show your support!
+    url: https://github.com/AF-1/jivelite-nowplayinginfoplus/
+    about: Show your support by starring the repository so that other users can discover it (in their News Feed).
